Updated firebase config in index.html

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>omnitrix_database_flutter</title>
+  <title>Project Sanctuary</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -34,21 +34,21 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
 
-  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+<!--  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>-->
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
        https://firebase.google.com/docs/web/setup#available-libraries -->
 
   <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAku41yq6jj6yJHilHGj0r2oGesoDBCnh0",
-    authDomain: "omnitrix-database.firebaseapp.com",
-    databaseURL: "https://omnitrix-database.firebaseio.com",
-    projectId: "omnitrix-database",
-    storageBucket: "omnitrix-database.appspot.com",
-    messagingSenderId: "840193091580",
-    appId: "1:840193091580:web:356047cc416be8275ff479"
+    const firebaseConfig = {
+    apiKey: "AIzaSyCGS7aJ--tZICb9zBfCqWEy2pwCc-roDc8",
+    authDomain: "natgeo-database.firebaseapp.com",
+    projectId: "natgeo-database",
+    storageBucket: "natgeo-database.appspot.com",
+    messagingSenderId: "553317843027",
+    appId: "1:553317843027:web:89d438c60e5b2184e446a6",
+    measurementId: "G-3P0R5F60ZD"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
