- Web build now works

--- a/web/index.html
+++ b/web/index.html
@@ -40,15 +40,15 @@
 
   <script>
   // Your web app's Firebase configuration
-    const firebaseConfig = {
-    apiKey: "AIzaSyCGS7aJ--tZICb9zBfCqWEy2pwCc-roDc8",
-    authDomain: "natgeo-database.firebaseapp.com",
-    projectId: "natgeo-database",
-    storageBucket: "natgeo-database.appspot.com",
-    messagingSenderId: "553317843027",
-    appId: "1:553317843027:web:89d438c60e5b2184e446a6",
-    measurementId: "G-3P0R5F60ZD"
-  };
+<!--    const firebaseConfig = {-->
+<!--    apiKey: "AIzaSyCGS7aJ&#45;&#45;tZICb9zBfCqWEy2pwCc-roDc8",-->
+<!--    authDomain: "natgeo-database.firebaseapp.com",-->
+<!--    projectId: "natgeo-database",-->
+<!--    storageBucket: "natgeo-database.appspot.com",-->
+<!--    messagingSenderId: "553317843027",-->
+<!--    appId: "1:553317843027:web:89d438c60e5b2184e446a6",-->
+<!--    measurementId: "G-3P0R5F60ZD"-->
+<!--  };-->
   // Initialize Firebase
 <!--  firebase.initializeApp(firebaseConfig);-->
   </script>
