--- a/web/index.html
+++ b/web/index.html
@@ -15,18 +15,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="The flutter version of the omnitrix database project">
+  <meta name="description" content="The flutter version of Project Sanctuary">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="omnitrix_database_flutter">
+  <meta name="apple-mobile-web-app-title" content="Project Sanctuary">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="./assets/images/logo.png"/>
 
   <title>Project Sanctuary</title>
   <link rel="manifest" href="manifest.json">
+
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -38,20 +39,6 @@
   <!-- TODO: Add SDKs for Firebase products that you want to use
        https://firebase.google.com/docs/web/setup#available-libraries -->
 
-  <script>
-  // Your web app's Firebase configuration
-<!--    const firebaseConfig = {-->
-<!--    apiKey: "AIzaSyCGS7aJ&#45;&#45;tZICb9zBfCqWEy2pwCc-roDc8",-->
-<!--    authDomain: "natgeo-database.firebaseapp.com",-->
-<!--    projectId: "natgeo-database",-->
-<!--    storageBucket: "natgeo-database.appspot.com",-->
-<!--    messagingSenderId: "553317843027",-->
-<!--    appId: "1:553317843027:web:89d438c60e5b2184e446a6",-->
-<!--    measurementId: "G-3P0R5F60ZD"-->
-<!--  };-->
-  // Initialize Firebase
-<!--  firebase.initializeApp(firebaseConfig);-->
-  </script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
