- Locations screen working again - Location on animal details screen now working

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="./assets/images/logo.png"/>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGS7aJ--tZICb9zBfCqWEy2pwCc-roDc8"></script>
   <title>Project Sanctuary</title>
   <link rel="manifest" href="manifest.json">
 
